--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 
-Block_02/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-Block_03/.ipynb_checkpoints/Vorlesung_03_Template-checkpoint.ipynb
-Block_03/.ipynb_checkpoints/01_Auskommentieren von Quellcode-checkpoint.ipynb
-Block_02/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-Block_02/.ipynb_checkpoints/03_Steuerzeichen-checkpoint.ipynb
-Block_02/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-Block_02/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-Block_02/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-Block_03/.ipynb_checkpoints/04_Beispiele explizite Typumwandlung in Python-checkpoint.ipynb
-Block_03/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren-checkpoint.ipynb
-Block_02/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-Block_02/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-Block_03/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren_Lsg-checkpoint.ipynb
-Block_03/.ipynb_checkpoints/02_Änderung des Datentyps einer Variablen-checkpoint.ipynb
+01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/Vorlesung_03_Template-checkpoint.ipynb
+02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/01_Auskommentieren von Quellcode-checkpoint.ipynb
+01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/03_Steuerzeichen-checkpoint.ipynb
+01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/04_Beispiele explizite Typumwandlung in Python-checkpoint.ipynb
+02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren-checkpoint.ipynb
+01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren_Lsg-checkpoint.ipynb
+02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/02_Änderung des Datentyps einer Variablen-checkpoint.ipynb
 Block_05/.ipynb_checkpoints/Vorlesung_05_Template-checkpoint.ipynb
 Block_04/.ipynb_checkpoints/03_Debugger-checkpoint.ipynb
 Block_04/.ipynb_checkpoints/02_Aufgabe_4_1_Lsg-checkpoint.ipynb
