--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,9 @@
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren_Lsg-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/02_Änderung des Datentyps einer Variablen-checkpoint.ipynb
 Block_05/.ipynb_checkpoints/Vorlesung_05_Template-checkpoint.ipynb
-Block_04/.ipynb_checkpoints/03_Debugger-checkpoint.ipynb
-Block_04/.ipynb_checkpoints/02_Aufgabe_4_1_Lsg-checkpoint.ipynb
-Block_04/.ipynb_checkpoints/01_Bibliotheken-checkpoint.ipynb
+03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/03_Debugger-checkpoint.ipynb
+03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/02_Aufgabe_4_1_Lsg-checkpoint.ipynb
+03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/01_Bibliotheken-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/01_Verzweigungen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/02_Schleifen_Sprunganweisungen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/A6_5_schere_stein_papier_Lsg-checkpoint.ipynb
