Neu Sortierung der Aufgaben und Anpassung Name

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren_Lsg-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/02_Änderung des Datentyps einer Variablen-checkpoint.ipynb
-Block_05/.ipynb_checkpoints/Vorlesung_05_Template-checkpoint.ipynb
+04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/Vorlesung_05_Template-checkpoint.ipynb
 03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/03_Debugger-checkpoint.ipynb
 03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/02_Aufgabe_4_1_Lsg-checkpoint.ipynb
 03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/01_Bibliotheken-checkpoint.ipynb
@@ -21,10 +21,10 @@ Block_06/.ipynb_checkpoints/01_Verzweigungen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/02_Schleifen_Sprunganweisungen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/A6_5_schere_stein_papier_Lsg-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/A6_4_magic_8_ball_Lsg-checkpoint.ipynb
-Block_05/.ipynb_checkpoints/01_Arbeiten_mit_strings-checkpoint.ipynb
-Block_05/.ipynb_checkpoints/02_Operatorrangfolge-checkpoint.ipynb
-Block_05/01_Arbeiten_mit_strings.ipynb
-Block_05/.ipynb_checkpoints/03_Gültigkeit_Variablen-checkpoint.ipynb
+04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/01_Arbeiten_mit_strings-checkpoint.ipynb
+04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/02_Operatorrangfolge-checkpoint.ipynb
+04_Vertiefung Variablen und Datentypen/01_Arbeiten_mit_strings.ipynb
+04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/03_Gültigkeit_Variablen-checkpoint.ipynb
 Block_08/.ipynb_checkpoints/Vorlesung_08_Template-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/01_Arbeiten mit eindimensionalen Listen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/A6_3_taschenrechner_Lsg-checkpoint.ipynb
