--- a/.gitignore
+++ b/.gitignore
@@ -25,18 +25,18 @@ Block_06/.ipynb_checkpoints/A6_4_magic_8_ball_Lsg-checkpoint.ipynb
 04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/02_Operatorrangfolge-checkpoint.ipynb
 04_Vertiefung Variablen und Datentypen/01_Arbeiten_mit_strings.ipynb
 04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/03_Gültigkeit_Variablen-checkpoint.ipynb
-Block_08/.ipynb_checkpoints/Vorlesung_08_Template-checkpoint.ipynb
+05_Funktionale Programmierung/.ipynb_checkpoints/Vorlesung_08_Template-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/01_Arbeiten mit eindimensionalen Listen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/A6_3_taschenrechner_Lsg-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/07_Aufgaben_Lsg-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/Untitled-checkpoint.ipynb
-Block_08/.ipynb_checkpoints/01_Prozeduren_Funktionen_Methoden-checkpoint.ipynb
-Block_08/.ipynb_checkpoints/A8_4_dezimal_zu_binär_Lsg-checkpoint.ipynb
-Block_08/.ipynb_checkpoints/A8_3_Taschenrechner_Lsg-checkpoint.ipynb
-Block_08/.ipynb_checkpoints/A8_5_datum_berechnen-checkpoint.ipynb
+05_Funktionale Programmierung/.ipynb_checkpoints/01_Prozeduren_Funktionen_Methoden-checkpoint.ipynb
+05_Funktionale Programmierung/.ipynb_checkpoints/A8_4_dezimal_zu_binär_Lsg-checkpoint.ipynb
+05_Funktionale Programmierung/.ipynb_checkpoints/A8_3_Taschenrechner_Lsg-checkpoint.ipynb
+05_Funktionale Programmierung/.ipynb_checkpoints/A8_5_datum_berechnen-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/A7_4_Belegung_Schachbrett_Lsg-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/A7_6_verschiebe_den_weißen_König_Lsg-checkpoint.ipynb
-Block_09/.ipynb_checkpoints/Vorlesung_09_Template-checkpoint.ipynb
-Block_09/.ipynb_checkpoints/01_Dateien_Lesen-checkpoint.ipynb
+06_Lesen und Schreiben von Dateien/.ipynb_checkpoints/Vorlesung_09_Template-checkpoint.ipynb
+06_Lesen und Schreiben von Dateien/.ipynb_checkpoints/01_Dateien_Lesen-checkpoint.ipynb
 Block_10/.ipynb_checkpoints/Block_10_ Arbeiten_mit_Dateien__Vorlesung_und Übung-checkpoint.ipynb
 Block_10/.ipynb_checkpoints/01_Algorithmen-checkpoint.ipynb
