--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ Block_07/.ipynb_checkpoints/A7_6_verschiebe_den_weißen_König_Lsg-checkpoint.ip
 06_Lesen und Schreiben von Dateien/.ipynb_checkpoints/01_Dateien_Lesen-checkpoint.ipynb
 Block_10/.ipynb_checkpoints/Block_10_ Arbeiten_mit_Dateien__Vorlesung_und Übung-checkpoint.ipynb
 Block_10/.ipynb_checkpoints/01_Algorithmen-checkpoint.ipynb
+Block_01
+Block_06
+Block_07
+Block_10
+binder
