--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 
-01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/Vorlesung_03_Template-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/01_Auskommentieren von Quellcode-checkpoint.ipynb
-01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/03_Steuerzeichen-checkpoint.ipynb
-01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/03_Steuerzeichen-checkpoint.ipynb
+01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/04_Beispiele explizite Typumwandlung in Python-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren-checkpoint.ipynb
-01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-01_Einführung in das Arbeiten mit der IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
+01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren_Lsg-checkpoint.ipynb
 02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/02_Änderung des Datentyps einer Variablen-checkpoint.ipynb
 04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/Vorlesung_05_Template-checkpoint.ipynb
