--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,43 @@
 
 01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/Vorlesung_03_Template-checkpoint.ipynb
-02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/01_Auskommentieren von Quellcode-checkpoint.ipynb
+02_Grundlagen_Variablen_und_Datentypen/.ipynb_checkpoints/Vorlesung_03_Template-checkpoint.ipynb
+02_Grundlagen_Variablen_und_Datentypen/.ipynb_checkpoints/01_Auskommentieren von Quellcode-checkpoint.ipynb
 01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
 01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/03_Steuerzeichen-checkpoint.ipynb
 01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
 01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
 01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/04_Beispiele explizite Typumwandlung in Python-checkpoint.ipynb
-02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren-checkpoint.ipynb
+02_Grundlagen_Variablen_und_Datentypen/.ipynb_checkpoints/04_Beispiele explizite Typumwandlung in Python-checkpoint.ipynb
+02_Grundlagen_Variablen_und_Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren-checkpoint.ipynb
 01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
 01_Einfuehrung_in_das_Arbeiten_mit_der_IDE/.ipynb_checkpoints/04_Aufgabe_2-checkpoint.ipynb
-02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren_Lsg-checkpoint.ipynb
-02_Grundlagen Variablen und Datentypen/.ipynb_checkpoints/02_Änderung des Datentyps einer Variablen-checkpoint.ipynb
-04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/Vorlesung_05_Template-checkpoint.ipynb
-03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/03_Debugger-checkpoint.ipynb
-03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/02_Aufgabe_4_1_Lsg-checkpoint.ipynb
-03_Arbeiten mit Operatoren und Kontrollstrukturen/.ipynb_checkpoints/01_Bibliotheken-checkpoint.ipynb
+02_Grundlagen_Variablen_und_Datentypen/.ipynb_checkpoints/05_Übungsaufgaben für Operatoren_Lsg-checkpoint.ipynb
+02_Grundlagen_Variablen_und_Datentypen/.ipynb_checkpoints/02_Änderung des Datentyps einer Variablen-checkpoint.ipynb
+04_Vertiefung_Variablen_und_Datentypen/.ipynb_checkpoints/Vorlesung_05_Template-checkpoint.ipynb
+03_Arbeiten_mit_Operatoren_und_Kontrollstrukturen/.ipynb_checkpoints/03_Debugger-checkpoint.ipynb
+03_Arbeiten_mit_Operatoren_und_Kontrollstrukturen/.ipynb_checkpoints/02_Aufgabe_4_1_Lsg-checkpoint.ipynb
+03_Arbeiten_mit_Operatoren_und_Kontrollstrukturen/.ipynb_checkpoints/01_Bibliotheken-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/01_Verzweigungen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/02_Schleifen_Sprunganweisungen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/A6_5_schere_stein_papier_Lsg-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/A6_4_magic_8_ball_Lsg-checkpoint.ipynb
-04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/01_Arbeiten_mit_strings-checkpoint.ipynb
-04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/02_Operatorrangfolge-checkpoint.ipynb
-04_Vertiefung Variablen und Datentypen/01_Arbeiten_mit_strings.ipynb
-04_Vertiefung Variablen und Datentypen/.ipynb_checkpoints/03_Gültigkeit_Variablen-checkpoint.ipynb
-05_Funktionale Programmierung/.ipynb_checkpoints/Vorlesung_08_Template-checkpoint.ipynb
+04_Vertiefung_Variablen_und_Datentypen/.ipynb_checkpoints/01_Arbeiten_mit_strings-checkpoint.ipynb
+04_Vertiefung_Variablen_und_Datentypen/.ipynb_checkpoints/02_Operatorrangfolge-checkpoint.ipynb
+04_Vertiefung_Variablen_und_Datentypen/01_Arbeiten_mit_strings.ipynb
+04_Vertiefung_Variablen_und_Datentypen/.ipynb_checkpoints/03_Gültigkeit_Variablen-checkpoint.ipynb
+05_Funktionale_Programmierung/.ipynb_checkpoints/Vorlesung_08_Template-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/01_Arbeiten mit eindimensionalen Listen-checkpoint.ipynb
 Block_06/.ipynb_checkpoints/A6_3_taschenrechner_Lsg-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/07_Aufgaben_Lsg-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/Untitled-checkpoint.ipynb
-05_Funktionale Programmierung/.ipynb_checkpoints/01_Prozeduren_Funktionen_Methoden-checkpoint.ipynb
-05_Funktionale Programmierung/.ipynb_checkpoints/A8_4_dezimal_zu_binär_Lsg-checkpoint.ipynb
-05_Funktionale Programmierung/.ipynb_checkpoints/A8_3_Taschenrechner_Lsg-checkpoint.ipynb
-05_Funktionale Programmierung/.ipynb_checkpoints/A8_5_datum_berechnen-checkpoint.ipynb
+05_Funktionale_Programmierung/.ipynb_checkpoints/01_Prozeduren_Funktionen_Methoden-checkpoint.ipynb
+05_Funktionale_Programmierung/.ipynb_checkpoints/A8_4_dezimal_zu_binär_Lsg-checkpoint.ipynb
+05_Funktionale_Programmierung/.ipynb_checkpoints/A8_3_Taschenrechner_Lsg-checkpoint.ipynb
+05_Funktionale_Programmierung/.ipynb_checkpoints/A8_5_datum_berechnen-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/A7_4_Belegung_Schachbrett_Lsg-checkpoint.ipynb
 Block_07/.ipynb_checkpoints/A7_6_verschiebe_den_weißen_König_Lsg-checkpoint.ipynb
-06_Lesen und Schreiben von Dateien/.ipynb_checkpoints/Vorlesung_09_Template-checkpoint.ipynb
-06_Lesen und Schreiben von Dateien/.ipynb_checkpoints/01_Dateien_Lesen-checkpoint.ipynb
+06_Lesen_und_Schreiben_von_Dateien/.ipynb_checkpoints/Vorlesung_09_Template-checkpoint.ipynb
+06_Lesen_und_Schreiben_von_Dateien/.ipynb_checkpoints/01_Dateien_Lesen-checkpoint.ipynb
 Block_10/.ipynb_checkpoints/Block_10_ Arbeiten_mit_Dateien__Vorlesung_und Übung-checkpoint.ipynb
 Block_10/.ipynb_checkpoints/01_Algorithmen-checkpoint.ipynb
 Block_01
